styles/_sidetopp.less
.sidetopp__tittel {
    text-align: center;
    margin-top: 0;
    margin-bottom: 2em;
    .typo-sidetittel-mixin();
}

.sidetopp__intro,
.sidetopp__meta {
    .mixin-panel-padding();
    margin-bottom: 3em;
    .redaksjonelt();
}

.sidetopp__meta {
    margin-top: -3em;
    text-align: center;
}

